--- a/pages/about/about.wxml
+++ b/pages/about/about.wxml
@@ -3,7 +3,9 @@
 <view class='about-page'>
 
   <!-- 团队信息  -->
-  <view class='part-title'>团队成员</view>
+  <view class='part-title flex j-center ag-center'>
+        <view class='line'></view>团队成员<view class='line'></view>
+   </view>
   <view class='team-info'>
         <view class='member-item' wx:for="{{members}}">
             <image src='{{item.avatar}}' class='member-avatar'></image>
@@ -13,12 +15,10 @@
   </view>
 
   <!-- 联系方式  -->
-  <view class='part-title'>加入我们</view>
+  <view class='part-title  flex j-center ag-center'>
+    <view class='line'></view>加入我们<view class='line'></view>
+  </view>
   <view class='link-info'>
-    <view class='link-item'>
-        <text>公众号</text>
-        <text>Phodal</text>
-    </view>
     <view class='link-item'>
         <text>QQ群</text>
         <text>529600495</text>
