--- a/pages/home-inside/list/list.wxml
+++ b/pages/home-inside/list/list.wxml
@@ -2,4 +2,29 @@
 <!-- 列表页  -->
 <view class='list-page'>
      
+     <block  wx:if="{{menu=='project'}}" >
+        <view class='part-hasTitle'  wx:for="{{list}}">
+            <view class='part-title' 
+                  bindtap='showContent' data-index="{{index}}">{{item.name}}</view>           
+            <view class='list-content' wx:show="{{index==showIndex}}">
+                <template is="cell" data="{{list:list.subdomains}}" />
+            </view>
+        </view>
+     </block>
+     
+    <block wx:if="{{menu!='project'}}">
+       <template is="cell" data="{{list:list}}" />
+    </block>    
+
 </view>
+
+<template name="cell">
+    <view class='g-cell' hover-class='active' wx:for="{{list}}" bindtap='clickHandler' data-title="{{item.name||item.title}}">
+        <view class='g-cell-wrapper'>
+            <view class='g-cell-title'>
+                <view class='g-cell-text'>{{item.name||item.title}}</view>
+            </view>
+            <view class='g-cell-arrow-right'></view>       
+        </view>
+    </view>
+</template>
