--- a/app.wxss
+++ b/app.wxss
@@ -1,3 +1,4 @@
+@import "/common/wxParse/wxParse.wxss";
 
 .flex{
     
@@ -141,4 +142,11 @@
     width: 140rpx;
     background-color: #999;
     margin: 0 20rpx;
+}
+
+.clearBoth:after, .clearBoth:before{
+    content: '';
+    display: block;
+    width: 100%;
+    clear: both;
 }
