--- a/pages/home-inside/markdown/markdown.wxml
+++ b/pages/home-inside/markdown/markdown.wxml
@@ -36,9 +36,11 @@
 
 <!--入口模版-->
 <template name="wxParse">
-  <block wx:for="{{wxParseData}}" wx:key="">
-    <template is="wxParse0" data="{{item}}" />
-  </block>
+  <view class='markdown-page' >
+    <block wx:for="{{wxParseData}}" wx:key="" >
+        <template is="wxParse0" data="{{item}}" />
+    </block> 
+  </view>
 </template>
 
 <!--循环模版-->
