--- a/pages/home-inside/markdown/markdown.wxml
+++ b/pages/home-inside/markdown/markdown.wxml
@@ -40,6 +40,11 @@
     <block wx:for="{{wxParseData}}" wx:key="" >
         <template is="wxParse0" data="{{item}}" />
     </block> 
+
+    <view class='err-tip'> 
+        <image src='/img/sad.png'></image>
+        获取文章出错，但我不背锅...
+    </view>
   </view>
 </template>
 
