--- a/pages/msgBox/msgBox.wxss
+++ b/pages/msgBox/msgBox.wxss
@@ -1,7 +1,6 @@
 
 /* 留言板容器  */
 .msgBox{
-    overflow: hidden;
     background-color: #EBEBEB;
     min-height: 100vh;
     height: 100%;
@@ -13,15 +12,17 @@
 
 /* 留言板 信息  */
 .msg-item{
+    position: relative;
     border-radius: 10rpx;
     box-shadow: 0 0 20rpx rgba(0, 0, 0, 0.4);
     margin: 0 30rpx;
     margin-top: 50rpx;
-    min-height: 250rpx;
+    min-height: 220rpx;
     color: #fff;
     background-color:#30B099;
     transition: 0.5s;
-    overflow: visible
+    overflow: visible;
+    padding-bottom: 50rpx;
 }
 .msg-item.color-0{
     background-color: #7E7D5B
@@ -78,21 +79,35 @@
 
 .msg-item-content{
     padding: 10rpx 20rpx;
+    padding-top: 30rpx;
     text-align: center;
 }
+.msg-time{
+    position: absolute;
+    right: 15rpx;
+    bottom: 10rpx;
+    color: #fff;
+    font-size: 30rpx;
+}
 
-/* 添加留言板  */
-.add-msg-btn{
+.add-msg-btn-wrap{
     position: fixed;
     bottom:20rpx;
     right:20rpx;
     z-index: 3;
     height:80rpx;
     width:80rpx;
-    background-color: #fff; 
+	animation: changeScale 1s infinite ease-in-out alternate;
     overflow: hidden;
     box-shadow: 0 0 20rpx #BFBFBF;
     border-radius: 100%;
+    background-color: #fff; 
+}
+
+/* 添加留言板  */
+.add-msg-btn{
+    height: 100%;
+    width: 100%;
     background-repeat:no-repeat;
     background-size: contain;
     transition: 0.5s;
@@ -116,21 +131,23 @@
     opacity: 0;
     background-color:rgba(0,0,0,0.4);
     transform: translate3d(0,105%,0);
-    transition: opacity 0.3s;
+    transition: opacity 0.5s;
     z-index: 1;
 }
 .comment-board-dialog{
     position: fixed;
     bottom: 0;
     left: 0;
+    top: 0;
     width: 100%;
-    padding:40rpx;
     background-color: #fff;
     box-shadow: 0 0 15rpx #32B9A2;
     transform: translate3d(0,105%,0);
-    transition: 0.3s ease-in-out;
+    transition: 0.5s ease-in-out;
     box-sizing: border-box;
     z-index: 2;
+    background:#f6f6f6;
+
 }
 .comment-board.visible .comment-board-bg{
     opacity: 1;
@@ -142,20 +159,25 @@
 }
 
 .comment-board-textarea{
-    height: 180rpx;
-    border: 1rpx solid #32B9A2;
+     height: 300rpx; 
+    /* border: 1rpx solid #32B9A2; */
     border-radius: 10rpx;
     overflow: hidden;
-    padding: 20rpx 30rpx;
+    border-bottom: 1rpx solid #eee;
+    background: #fff;
 
 }
 .comment-board-textarea textarea{
     display: block;
     height:100%;
     width:100%;
+    padding: 30rpx;
+    font-size: 32rpx;
+    box-sizing: border-box;
 }
 .comment-board-textarea textarea::-webkit-input-placeholder{
-    color: #eee
+    color: #eee;
+    opacity: 0.3;
 }
 .comment-publish{
     width: 40%;
@@ -191,18 +213,4 @@
     padding: 36rpx 0;
     color: #9FA3A6;
     font-size: 32rpx;
-}
-
-/* 当前没有留言  */
-.no-comments{
-    color: #9FA3A6;
-    text-align: center;
-    padding-top: 300rpx;
-    font-size: 32rpx;
-}
-
-.no-comments image{
-    height: 60rpx;
-    width: 60rpx;
-    margin-right: 20rpx;
 }
