留言增加事件

--- a/pages/home-inside/list/list.wxml
+++ b/pages/home-inside/list/list.wxml
@@ -26,7 +26,7 @@
        <template is="cell" data="{{list:list}}" />
     </block>   
 
-    <view wx:if="isErr" class='err-tip  flex ag-center j-center'>
+    <view  wx:if="{{isErr}}" class='err-tip  flex ag-center j-center'>
          <image src='/img/sad.png'></image> 发生错误了呢...
     </view>
 
